moved images to public folder. Made recipe skeleton component

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="">
     <head>
         <meta charset="UTF-8" />
@@ -41,8 +41,52 @@
 
         --body-fs: 1rem;
         --fw-regular: 400;
-        --fw-medium: 600;
-        --fw-semiBold: 700;
+        --fw-semiBold: 600;
+        --fw-bold: 700;
+
+        --spacing1: 4px;
+        --spacing2: 8px;
+        --spacing3: 12px;
+        --spacing4: 16px;
+        --spacing5: 24px;
+        --spacing6: 32px;
+        --spacing7: 40px;
+        --spacing8: 88px;
+    }
+
+    .textPresetOne {
+        font-size: 40px;
+        font-weight: 700;
+        line-height: 120%;
+        letter-spacing: 0;
+    }
+
+    .textPresetTwo {
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 125%;
+        letter-spacing: 0;
+    }
+
+    .textPresetThree {
+        font-size: 16px;
+        font-weight: 600;
+        line-height: 150%;
+        letter-spacing: 0;
+    }
+
+    .textPresetFour {
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 150%;
+        letter-spacing: 0;
+    }
+
+    .textPresetFour {
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 150%;
+        letter-spacing: 0;
     }
 </style>
 
