--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="">
     <head>
         <meta charset="UTF-8" />
@@ -82,7 +82,7 @@
         letter-spacing: 0;
     }
 
-    .textPresetFour {
+    .textPresetFourBold {
         font-size: 14px;
         font-weight: 500;
         line-height: 150%;
